--- a/hw-02.md
+++ b/hw-02.md
@@ -8,4 +8,39 @@
 
 <img width="575" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/3db06dde-a1c0-47fd-bf6e-a3542139aedc">  
 
+# Задание 4
+Объявите в файле outputs.tf output типа map, содержащий { instance_name = external_ip } для каждой из ВМ.
+Примените изменения.
+В качестве решения приложите вывод значений ip-адресов команды terraform output  
 
+<img width="489" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/d559d307-75cd-4557-834b-5acb314df9c1">
+
+# Задание 5
+В файле locals.tf опишите в одном local-блоке имя каждой ВМ, используйте интерполяцию ${..} с несколькими переменными по примеру из лекции.  
+Замените переменные с именами ВМ из файла variables.tf на созданные вами local переменные.  
+
+<img width="390" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/0f71d308-76e5-49c9-a80e-e2119bd9bc7d">  
+
+# Задание 6
+Вместо использования 3-х переменных ".._cores",".._memory",".._core_fraction" в блоке resources {...}, объедените их в переменные типа map с именами "vm_web_resources" и "vm_db_resources".
+```
+variable "vm_db_resources" {
+  type = map(number)
+  default = {
+    cores = 2
+    memory = 2
+    core_fraction = 20
+  }  
+}
+```
+Так же поступите с блоком metadata {serial-port-enable, ssh-keys}, эта переменная должна быть общая для всех ваших ВМ.
+Найдите и удалите все более не используемые переменные проекта.  
+```
+variable "vm_metadata" {
+  type = map
+  default = {
+    serial-port-enable = 1
+    ssh-keys = "ubuntu:ssh-ed25519 ***"
+  }
+}
+```
