--- a/hw-02.md
+++ b/hw-02.md
@@ -44,3 +44,17 @@ variable "vm_metadata" {
   }
 }
 ```
+
+# Задание 7
+
+Напишите, какой командой можно отобразить второй элемент списка test_list?  
+> local.test_list[1]  
+
+Найдите длину списка test_list с помощью функции length(<имя переменной>)  
+> local.length(test_list)    
+
+Напишите, какой командой можно отобразить значение ключа admin из map test_map ?  
+> local.test_map.admin  
+
+Напишите interpolation выражение, результатом которого будет: "John is admin for production server based on OS ubuntu-20-04 with X vcpu, Y ram and Z virtual disks", используйте данные из переменных test_list, test_map, servers и функцию length() для подстановки значений.
+> <img width="958" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/917c811e-a760-4046-bb06-534d026a0ba3">
