--- a/hw-03.md
+++ b/hw-03.md
@@ -2,3 +2,39 @@
 ##### Приложите скриншот входящих правил "Группы безопасности" в ЛК Yandex Cloud или скриншот отказа в предоставлении доступа к preview версии.
 <img width="610" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/87297d04-3528-4a2f-84d4-98ec1da68ac4">
   
+# Задание 2
+##### 1. Создайте файл count-vm.tf. Опишите в нем создание двух одинаковых ВМ web-1 и web-2(не web-0 и web-1!), с минимальными параметрами, используя мета-аргумент count loop. Назначьте ВМ созданную в 1-м задании группу безопасности.
+
+```terraform
+resource "yandex_compute_instance" "web" {
+    depends_on = [ yandex_vpc_subnet.develop ]
+    count = 2
+    name = "web-${count.index + 1}"
+    zone = var.default_zone
+
+    resources {
+        cores           = var.vm_resources.cores
+        memory          = var.vm_resources.memory
+        core_fraction   = var.vm_resources.core_fraction
+    }
+    
+    boot_disk {
+        initialize_params {
+            image_id = data.yandex_compute_image.ubuntu.image_id
+        }
+     }
+    scheduling_policy {
+        preemptible = true
+    }
+    network_interface {
+        subnet_id = yandex_vpc_subnet.develop.id
+        security_group_ids = [yandex_vpc_security_group.example.id]
+
+    }
+    metadata = {
+      ssh_key = var.ssh_key
+    }
+}
+```
+
+##### 2.
