--- a/hw-03.md
+++ b/hw-03.md
@@ -38,3 +38,4 @@ resource "yandex_compute_instance" "web" {
 ```
 
 ##### 2.
+<img width="1297" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/c2ef3a45-d8c2-4f21-aee8-b21eb6954df9">
