--- a/hw-03.md
+++ b/hw-03.md
@@ -39,3 +39,7 @@ resource "yandex_compute_instance" "web" {
 
 ##### 2.
 <img width="1297" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/c2ef3a45-d8c2-4f21-aee8-b21eb6954df9">
+
+##### 3.
+<img width="1303" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/95d3a89a-b247-4dc1-b5f7-4e18d2813def">
+
