--- a/hw-03.md
+++ b/hw-03.md
@@ -149,3 +149,37 @@ resource "yandex_compute_instance" "storage" {
 ```
 <img width="1303" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/95d3a89a-b247-4dc1-b5f7-4e18d2813def">
 
+##### 4.
+```terraform
+resource "local_file" "hosts_cfg" {
+  content = templatefile("${path.module}/hosts.tftpl",
+
+    { 
+        web     =  yandex_compute_instance.web,
+        db     =  yandex_compute_instance.db,
+        storage     =  yandex_compute_instance.storage
+             }  )
+
+  filename = "${abspath(path.module)}/hosts.cfg"
+}
+```
+```tftpl
+[web]
+
+%{~ for i in web ~}
+
+${i["name"]}   ansible_host=${i["network_interface"][0]["nat_ip_address"]} 
+%{~ endfor ~}
+
+[db]
+
+%{~ for i in db ~}
+
+${i["name"]}   ansible_host=${i["network_interface"][0]["nat_ip_address"]} 
+%{~ endfor ~}
+
+[storage]
+${storage.name}   ansible_host=${storage.network_interface[0].nat_ip_address}
+```
+<img width="386" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/a53a3e44-7ab8-44b2-85ad-86d5b3b22533">
+
