--- a/hw-04.md
+++ b/hw-04.md
@@ -31,3 +31,67 @@ packages:
    
 <img width="600" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/495cf5a4-9451-4019-90d1-a91393cd1c54">
 <img width="541" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/56b672ca-5fd2-4feb-aec6-a6deaa4b8560">
+
+# Задание 1  
+
+1. Напишите локальный модуль vpc, который будет создавать 2 ресурса: одну сеть и одну подсеть в зоне, объявленной при вызове модуля. например: ru-central1-a.
+2. Модуль должен возвращать значения vpc.id и subnet.id
+3. Замените ресурсы yandex_vpc_network и yandex_vpc_subnet, созданным модулем.
+4. Сгенерируйте документацию к модулю с помощью terraform-docs.
+
+```terraform
+terraform {
+  required_providers {
+    yandex = {
+      source = "yandex-cloud/yandex"
+    }
+  }
+  required_version = ">=0.13"
+}
+
+resource "yandex_vpc_network" "develop" {
+  name = var.vpc_name
+}
+
+resource "yandex_vpc_subnet" "develop" {
+  name           = var.vpc_name
+  zone           = var.default_zone
+  network_id     = yandex_vpc_network.develop.id
+  v4_cidr_blocks = var.default_cidr
+}
+
+output "vpc_id" {
+  value = yandex_vpc_network.develop.id
+}
+
+output "subnet_id" {
+  value = yandex_vpc_subnet.develop.id
+}
+```
+
+```terraform
+module "module_network_subnet" {
+  source          = "./module_network_subnet"
+  default_zone    = "ru-central1-a"
+}
+
+module "test-vm" {
+  source          = "git::https://github.com/udjin10/yandex_compute_instance.git?ref=main"
+  env_name        = "develop"
+  #network_id      = yandex_vpc_network.develop.id
+  network_id      = module.module_network_subnet.vpc_id
+  subnet_zones    = ["ru-central1-a"]
+  #subnet_ids      = [ yandex_vpc_subnet.develop.id ]
+  subnet_ids      = [ module.module_network_subnet.subnet_id ]
+  instance_name   = "web"
+  instance_count  = 1
+  image_family    = "ubuntu-2004-lts"
+  public_ip       = true
+  
+  metadata = {
+      user-data          = data.template_file.cloudinit.rendered #Для демонстрации №3
+      serial-port-enable = 1
+  }
+
+}
+```
