--- a/hw-04.md
+++ b/hw-04.md
@@ -95,3 +95,7 @@ module "test-vm" {
 
 }
 ```
+
+terraform-docs:
+https://github.com/nehardcore/terraform/blob/terraform-04/module_network_subnet/README.md
+
