--- a/hw-04.md
+++ b/hw-04.md
@@ -99,3 +99,71 @@ module "test-vm" {
 terraform-docs:
 https://github.com/nehardcore/terraform/blob/terraform-04/module_network_subnet/README.md
 
+# Задание 3
+
+1. Выведите список ресурсов в стейте.
+```
+cch@MBP-Costas src % terraform state list
+data.template_file.cloudinit
+module.module_network_subnet.yandex_vpc_network.develop
+module.module_network_subnet.yandex_vpc_subnet.develop
+module.test-vm.data.yandex_compute_image.my_image
+module.test-vm.yandex_compute_instance.vm[0]
+```
+
+2. Удалите из стейта модуль vpc.
+```
+cch@MBP-Costas src % terraform state rm "module.module_network_subnet"
+Removed module.module_network_subnet.yandex_vpc_network.develop
+Removed module.module_network_subnet.yandex_vpc_subnet.develop
+Successfully removed 2 resource instance(s).
+```
+3. Импортируйте его обратно. Проверьте terraform plan - изменений быть не должно. Приложите список выполненных команд и вывод.
+```
+cch@MBP-Costas src % terraform import 'module.module_network_subnet.yandex_vpc_network.develop' enpk988ds7lcn3vtg9u2
+
+data.template_file.cloudinit: Reading...
+data.template_file.cloudinit: Read complete after 0s [id=a64d6418a4bfc30e8d38bb36392fa21e0a792254d7fdcf066b455073b7aed6ce]
+module.module_network_subnet.yandex_vpc_network.develop: Importing from ID "enpk988ds7lcn3vtg9u2"...
+module.test-vm.data.yandex_compute_image.my_image: Reading...
+module.module_network_subnet.yandex_vpc_network.develop: Import prepared!
+  Prepared yandex_vpc_network for import
+module.module_network_subnet.yandex_vpc_network.develop: Refreshing state... [id=enpk988ds7lcn3vtg9u2]
+module.test-vm.data.yandex_compute_image.my_image: Read complete after 6s [id=fd8de1idq8noos4s3lfb]
+
+Import successful!
+
+The resources that were imported are shown above. These resources are now in
+your Terraform state and will henceforth be managed by Terraform.
+```
+```
+cch@MBP-Costas src % terraform import 'module.module_network_subnet.yandex_vpc_subnet.develop' e9bvcjqoblnn0fpt101u
+
+data.template_file.cloudinit: Reading...
+data.template_file.cloudinit: Read complete after 0s [id=a64d6418a4bfc30e8d38bb36392fa21e0a792254d7fdcf066b455073b7aed6ce]
+module.test-vm.data.yandex_compute_image.my_image: Reading...
+module.module_network_subnet.yandex_vpc_subnet.develop: Importing from ID "e9bvcjqoblnn0fpt101u"...
+module.module_network_subnet.yandex_vpc_subnet.develop: Import prepared!
+  Prepared yandex_vpc_subnet for import
+module.module_network_subnet.yandex_vpc_subnet.develop: Refreshing state... [id=e9bvcjqoblnn0fpt101u]
+module.test-vm.data.yandex_compute_image.my_image: Read complete after 5s [id=fd8de1idq8noos4s3lfb]
+
+Import successful!
+
+The resources that were imported are shown above. These resources are now in
+your Terraform state and will henceforth be managed by Terraform.
+```
+```
+cch@MBP-Costas src % terraform plan
+data.template_file.cloudinit: Reading...
+data.template_file.cloudinit: Read complete after 0s [id=a64d6418a4bfc30e8d38bb36392fa21e0a792254d7fdcf066b455073b7aed6ce]
+module.test-vm.data.yandex_compute_image.my_image: Reading...
+module.module_network_subnet.yandex_vpc_network.develop: Refreshing state... [id=enpk988ds7lcn3vtg9u2]
+module.test-vm.data.yandex_compute_image.my_image: Read complete after 4s [id=fd8de1idq8noos4s3lfb]
+module.module_network_subnet.yandex_vpc_subnet.develop: Refreshing state... [id=e9bvcjqoblnn0fpt101u]
+module.test-vm.yandex_compute_instance.vm[0]: Refreshing state... [id=fhmk8qe3js6fiina71tq]
+
+No changes. Your infrastructure matches the configuration.
+
+Terraform has compared your real infrastructure against your configuration and found no differences, so no changes are needed.
+```
