--- a/hw-05.md
+++ b/hw-05.md
@@ -9,6 +9,10 @@ TFLint:
 1. Module source uses a default branch as ref (main)
 2. Missing version constraint for provider
 3. Variable is declared but not used
+Checkov:
+1. CKV_YC_11: "Ensure security group is assigned to network interface."
+2. CKV_YC_2: "Ensure compute instance does not have public IP."
+3. CKV_TF_1: "Ensure Terraform module sources use a commit hash"
 
 # Задание 2  
 1. Возьмите ваш GitHub репозиторий с выполненным ДЗ №4 в ветке 'terraform-04' и сделайте из него ветку 'terraform-05'
