--- a/hw-05.md
+++ b/hw-05.md
@@ -22,3 +22,25 @@ Checkov:
 4. Откройте в проекте terraform console, а в другом окне из этой же директории попробуйте запустить terraform apply.
 5. Пришлите ответ об ошибке доступа к State.
 6. Принудительно разблокируйте State. Пришлите команду и вывод.
+
+```terraform
+backend "s3" {
+     endpoint = "storage.yandexcloud.net"
+     bucket = "netology-tfstate-hw05"
+     region = "ru-central1"
+     key = "terraform.tfstate"
+
+     skip_region_validation = true
+     skip_credentials_validation = true
+
+     dynamodb_endpoint = "https://docapi.serverless.yandexcloud.net/ru-central1/b1g7scnf5uvlbrtgv0aj/etnth7e7g92dkavtbltl"
+     dynamodb_table = "netology-tfstate"
+   }
+```
+<img width="1146" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/fab701f0-c9ab-468b-91a9-d3333cced79e">
+
+<img width="957" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/7e79ef50-2ec1-43b6-bc9d-fcbc367a4d73">
+
+<img width="872" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/b1360db0-9818-4c01-83db-1cb925c20509">
+
+
