--- a/hw-05.md
+++ b/hw-05.md
@@ -43,4 +43,7 @@ backend "s3" {
 
 <img width="872" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/b1360db0-9818-4c01-83db-1cb925c20509">
 
+<img width="539" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/d3ae7d66-d43c-42b0-94f6-7be2d8571f07">
+
+<img width="633" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/1be753ad-c8e0-44a9-9c75-c732dd02b147">
 
