--- a/hw-05.md
+++ b/hw-05.md
@@ -47,3 +47,17 @@ backend "s3" {
 
 <img width="633" alt="image" src="https://github.com/nehardcore/terraform/assets/97674120/1be753ad-c8e0-44a9-9c75-c732dd02b147">
 
+# Задание 3
+
+1. Сделайте в GitHub из ветки 'terraform-05' новую ветку 'terraform-hotfix'.
+2. Проверье код с помощью tflint и checkov, исправьте все предупреждения и ошибки в 'terraform-hotfix', сделайте комит.
+3. Откройте новый pull request 'terraform-hotfix' --> 'terraform-05'.
+4. Вставьте в комментарий PR результат анализа tflint и checkov, план изменений инфраструктуры из вывода команды terraform plan.
+5. Пришлите ссылку на PR для ревью(вливать код в 'terraform-05' не нужно).
+
+> Исправил все локальные ошибки, типа неиспользованных переменных и отстутствие версии для провайдера. Остались ошибки в удаленном модуле, но это уже не мне исправлять, как я понимаю.
+  
+> PR: https://github.com/nehardcore/terraform/pull/1
+
+
+
